@@ -6,6 +6,7 @@ import com.example.demo.repository.SheetSourceRepository;
 import java.util.ArrayList;
 
 import java.util.Arrays;
+import java.util.List;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 
@@ -20,7 +21,7 @@ public class Configuration {
       final var list = new ArrayList<SheetSource>();
 
       // TODO: add the sheetTypeCT to the graphConfig
-      for (SheetType sheetType : Arrays.asList(SheetType.CT)) {
+      for (var sheetType : List.of(SheetType.CT, SheetType.CN, SheetType.CR, SheetType.DMR)) {
         list.add(new SheetSource("id", "infoPageIdentityDisplayType", String.class.getTypeName(),
             sheetType));
       }
